Bug 120061 - F5 Navigator content navigation view multiple selection of Headings does not work on reopening document
Summary: F5 Navigator content navigation view multiple selection of Headings does not ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.7.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2018-09-22 17:53 UTC by Jim Raykowski
Modified: 2018-10-12 05:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-09-22 17:53:23 UTC
To repro:

1) open Example Document from bug 119900
2) F5 to open Navigator window
if the Content Navigation View mode is already enabled skip to step 7
3) click on Headings in the content tree
4) click Content Navigation View button
5) close the document
6) open the document
7) expand the Uberscrift1 node in the Navigator window
8) try selecting multiple Uberscrift2 Headings using Ctrl+ or Shift+ 

Results:
multiple selection does not work

Expectrd Results:
multiple selection works

To enable multiselection toggle Content Navigation View button off and on.

Multiply heading selection was introduce here: bug 54834

I can provide a fix for this on bug confirmation.
Comment 1 Drew Jensen 2018-09-22 18:48:46 UTC
Checked using Ubuntu 18.04 and Version: 5.4.7.2
Build ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 

also verified the anomaly in 6.0.6 and 6.2Alpha
Comment 2 Jim Raykowski 2018-09-22 19:42:23 UTC
Drew, Thanks for testing!

A patch for this is here:
https://gerrit.libreoffice.org/#/c/60910/
Comment 3 Commit Notification 2018-10-08 21:18:06 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7645bd0adf4f4e8845ecb7bcb814aa2a0537bff3

tdf#120061 Enable Navigator multiple headings selection

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.