tdf#120061 Enable Navigator multiple headings selection

...on document reopening when Navigator window was previously in
Headings/Outline Content Navigation View mode

Change-Id: I169df15e81c4e9acf24c0e76d7f720af598c5b93